--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,11 @@
         <powermock.version>1.7.4</powermock.version>
         <!-- More visible way how to change dependency versions -->
         <spigot.version>1.14.4-R0.1-SNAPSHOT</spigot.version>
-        <bentobox.version>1.7.0-SNAPSHOT</bentobox.version>
+        <bentobox.version>1.7.0</bentobox.version>
         <!-- Revision variable removes warning about dynamic version -->
         <revision>${build.version}-SNAPSHOT</revision>
         <!-- This allows to change between versions and snapshots. -->
-        <build.version>0.4.0</build.version>
+        <build.version>0.4.1</build.version>
         <build.number>-LOCAL</build.number>
     </properties>
 
