--- a/pom.xml
+++ b/pom.xml
@@ -264,9 +264,14 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.1</version>
+                <version>0.8.3</version>
                 <configuration>
                     <append>true</append>
+                    <excludes>
+                        <!-- This is required to prevent Jacoco from adding synthetic fields
+                            to a JavaBean class (causes errors in testing) -->
+                        <exclude>**/*Names*</exclude>
+                    </excludes>
                 </configuration>
                 <executions>
                     <execution>
