Added build number to addon version

--- a/src/main/resources/addon.yml
+++ b/src/main/resources/addon.yml
@@ -1,6 +1,6 @@
 name: Greenhouses
 main: world.bentobox.greenhouses.Greenhouses
-version: ${version}
+version: ${version}${build.number}
 
 authors: tastybento
 
