--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,12 @@
         <java.version>1.8</java.version>
         <powermock.version>2.0.2</powermock.version>
         <!-- More visible way how to change dependency versions -->
-        <spigot.version>1.14.4-R0.1-SNAPSHOT</spigot.version>
-        <bentobox.version>1.12.0</bentobox.version>
+        <spigot.version>1.15.2-R0.1-SNAPSHOT</spigot.version>
+        <bentobox.version>1.14.0-SNAPSHOT</bentobox.version>
         <!-- Revision variable removes warning about dynamic version -->
         <revision>${build.version}-SNAPSHOT</revision>
         <!-- This allows to change between versions and snapshots. -->
-        <build.version>1.0.2</build.version>
+        <build.version>1.1.0</build.version>
         <build.number>-LOCAL</build.number>
     </properties>
 
