Added setting to remove glowstone as an option for walls and roof.
Fixes https://github.com/BentoBoxWorld/Greenhouses/issues/57

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -31,3 +31,5 @@ greenhouses:
   allowflowout: false
   # Allow lava or water to flow into a greenhouse, e.g., through the door
   allowflowin: false
+  # Allow glowstone to be used as well as glass in roof and walls
+  allowglowstone: true
