--- a/src/main/resources/biomes.yml
+++ b/src/main/resources/biomes.yml
@@ -67,7 +67,7 @@ biomes:
     moblimit: 9
   Cold_Rabbit:
     friendlyname: "Cold Taiga Forest"
-    biome: TAIGA_HILLS
+    biome: OLD_GROWTH_SPRUCE_TAIGA
     icon: SPRUCE_SAPLING
     priority: 20
     contents:
@@ -280,6 +280,7 @@ biomes:
     plants:
       RED_MUSHROOM: 20:GRASS_BLOCK
       BROWN_MUSHROOM: 20:GRASS_BLOCK
+      BLUE_ORCHID: 10:GRASS_BLOCK
       LILY_PAD: 5:WATER
     mobs:
       SLIME: 5:WATER
