--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
         <java.version>17</java.version>
         <powermock.version>2.0.9</powermock.version>
         <!-- More visible way how to change dependency versions -->
-        <spigot.version>1.19.3-R0.1-SNAPSHOT</spigot.version>
-        <bentobox.version>1.21.0</bentobox.version>
+        <spigot.version>1.20.2-R0.1-SNAPSHOT</spigot.version>
+        <bentobox.version>2.0.0-SNAPSHOT</bentobox.version>
         <!-- Revision variable removes warning about dynamic version -->
         <revision>${build.version}-SNAPSHOT</revision>
         <!-- This allows to change between versions and snapshots. -->
